# forced-choice

./: pyproject.toml
forced_choice/: gui.py  player.py  staircase.py  volume_manager.py
tests/: test_player.py  test_volume_manager.py
